@@ -1,8 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-	<!-- <system.windows.forms jitDebugging="true" /> -->
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7"/>
+  </startup>
+  <!-- <system.windows.forms jitDebugging="true" /> -->
 	<runtime>
-		<developmentMode enabled="true" />
+    <developmentMode enabled="true"/>
     
     <!-- https://docs.microsoft.com/en-us/dotnet/framework/configure-apps/file-schema/runtime/thread-useallcpugroups-element -->
     <!--  -->
