@@ -1,6 +1,11 @@
 ﻿Comprehensive changes can be found in Git change history:
 	https://github.com/mkahvi/taskmaster/commits/master
 
+### 2018-05-04
+	Fixed: Validation does not find executables correctly.
+	Changed: Some behind the scenes things to help catch an elusive problem with per-app power management.
+### 2018-04-30
+	Changed: Code cleanup.
 ### 2018-04-29
 	Fixed: Clear UI log caused the log to not have anything after.
 	Changed: Added a bit more logic to ensure tray becomes visible. May not actually help.
